--- a/flaskps/templates/auth/panel_components/instrumento.html
+++ b/flaskps/templates/auth/panel_components/instrumento.html
@@ -15,7 +15,7 @@
                             <p class="h6 w400">Tipo:{{ instrumento.tipo }}</p>
                             <p class="h6 w400">Codigo:{{ instrumento.codigo }}</p>
                             <hr>
-                            <img src="/static/img/instrumentos/{{instrumento.img}}" alt="Imagen de instrumento">
+                            <img class="instrumento" src="/static/img/instrumentos/{{instrumento.img}}" alt="Imagen de instrumento">
                         </div>
                     </div>  
                 </div>  
