--- a/flaskps/templates/auth/panel_components/instrumentos.html
+++ b/flaskps/templates/auth/panel_components/instrumentos.html
@@ -95,7 +95,7 @@
                         {% if p.nombre == 'instrumento_update' %}
                         <!-- Modificar estudiante -->
                         <td>
-                        <a href="/update_instrumento/{{row.id}}" class="btn btn-warning btn-sm mb-3"><i class="fas fa-edit mr-2"></i>Editar</a>
+                        <a href="/get_update_instrumento/{{row.id}}" class="btn btn-warning btn-sm mb-3"><i class="fas fa-edit mr-2"></i>Editar</a>
                         </td>
                         {% endif %}
                         {% endfor %}
