baja de instrumentos

--- a/flaskps/templates/auth/panel_components/instrumentos.html
+++ b/flaskps/templates/auth/panel_components/instrumentos.html
@@ -103,7 +103,7 @@
                         {% if p.nombre == 'instrumento_destroy' %}
                         <!-- Eliminar estudiante -->
                         <td>
-                        <a href="/delete_instrumento/{{row.id}}" class="btn btn-danger btn-sm mb-3" onclick="return confirm('Estas seguro que deseas eliminar el instrumento?')"><i class="fas fa-user-minus mr-2"></i>Eliminar</a>
+                        <a href="/delete_instrument/{{row.id}}" class="btn btn-danger btn-sm mb-3" onclick="return confirm('Estas seguro que deseas eliminar el instrumento?')"><i class="fas fa-user-minus mr-2"></i>Eliminar</a>
                         </td>
                         {% endif %}
                         {% endfor %}
