--- a/flaskps/templates/auth/panel_components/instrumento_new.html
+++ b/flaskps/templates/auth/panel_components/instrumento_new.html
@@ -13,25 +13,19 @@
                             <hr>
                         </div>
                         <div class="col-12">
-                            <form method="POST" action="{{ url_for('update_instrument') }}">
+                            <form method="POST" action="{{ url_for('insert_instrument') }}">
                                 <div class="row">
-                                    <div class="col-12 col-md-6">
-                                        <input type="hidden"  name="id_data" value="{{instrumento.id}}">
+                                    <div class="col-6">
                                         <label class="h6 w400 black4">Nombre</label>
-                                        <input type="text" class="form-control mb-3" value="{{ instrumento.nombre }}" name="nombre" required>
+                                        <input type="text" class="form-control mb-3" name="nombre" placeholder="Nombre" required>
                                         <label class="h6 w400 black4">Tipo</label>
                                         <select name="tipo_instrumento" class="browser-default custom-select mb-3" required="1" required>
                                             {% for tipo in tipos %}
-                                            {% if tipo.id == instrumento.tipo_id %}
-                                            <option value="{{tipo.id}}" selected>{{tipo.nombre}}</option>
-                                            {% else %}
                                             <option value="{{tipo.id}}">{{tipo.nombre}}</option>
-                                            {% endif %}
                                             {% endfor %}
                                         </select>
                                         <label class="h6 w400 black4">Codigo</label>
-                                        <input type="text" class="form-control mb-3" value="{{ instrumento.codigo }}" name="codigo" required>
-                                        <img class="instrumento" src="/static/img/instrumentos/{{instrumento.img}}" alt="Imagen de instrumento">
+                                        <input type="text" class="form-control mb-3" placeholder="Codigo" name="codigo" required>
                                     </div>
                                     <div class="col-12 text-right">
                                         <hr>
