nucleos front + backend

--- a/flaskps/templates/auth/panel.html
+++ b/flaskps/templates/auth/panel.html
@@ -19,6 +19,7 @@
                                 <li class="list-group-item menuItem" role="button"><a href="/panel_docentes"><i class="fas fa-user-friends black3 mr-2"></i>Docentes</a></li>
                                 <li class="list-group-item menuItem" role="button"><a href="/panel_instrumentos"><i class="fas fa-guitar black3 mr-2"></i>Instrumentos</a></li>
                                 <li class="list-group-item menuItem" role="button"><a href="/panel_usuarios"><i class="fas fa-users black3 mr-2"></i>Usuarios</a></li>
+                                <li class="list-group-item menuItem" role="button"><a href="/panel_nucleos"><i class="fas fa-map-marked-alt black3 mr-2"></i>Núcleos</a></li>
                                 <li class="list-group-item menuItem" role="button"><a href="/panel_ciclos"><i class="fas fa-school black3 mr-2"></i>Ciclos lectivos</a></li>
                                 <li class="list-group-item menuItem" role="button"><a href="/panel_adminsitio"><i class="fas fa-globe-americas black3 mr-2"></i>Administración del sitio</a></li>
                             </ul>
