--- a/flaskps/templates/auth/panel_components/instrumento_update.html
+++ b/flaskps/templates/auth/panel_components/instrumento_update.html
@@ -13,7 +13,7 @@
                             <hr>
                         </div>
                         <div class="col-12">
-                            <form method="POST" action="{{ url_for('update_instrument') }}">
+                            <form method="POST" action="{{ url_for('update_instrument') }}" enctype="multipart/form-data">
                                 <div class="row">
                                     <div class="col-12 col-md-6">
                                         <input type="hidden"  name="id_data" value="{{instrumento.id}}">
