--- a/flaskps/templates/auth/panel.html
+++ b/flaskps/templates/auth/panel.html
@@ -1,5 +1,4 @@
     {% extends "layout.html" %}    
-
         {% block content %}
         <div class="container-fluid w-100">
             {% include 'auth/panel_components/mensajes_alertas.html' %}
@@ -15,12 +14,12 @@
                                 <img src="{{ url_for('static', filename='img/logo-dark.png') }}" class="panel-logo" alt="logo-de-orquesta-escuela-berisso">
                             </div>
                             <ul class="list-group list-group-flush">
-                                <li class="list-group-item menuItem" role="button"><a href="/panel_estudiantes"><i class="fas fa-user-graduate black3 mr-2"></i>Estudiantes</a></li>
-                                <li class="list-group-item menuItem" role="button"><a href="/panel_docentes"><i class="fas fa-user-friends black3 mr-2"></i>Docentes</a></li>
-                                <li class="list-group-item menuItem" role="button"><a href="/panel_instrumentos"><i class="fas fa-guitar black3 mr-2"></i>Instrumentos</a></li>
-                                <li class="list-group-item menuItem" role="button"><a href="/panel_usuarios"><i class="fas fa-users black3 mr-2"></i>Usuarios</a></li>
-                                <li class="list-group-item menuItem" role="button"><a href="/panel_nucleos"><i class="fas fa-map-marked-alt black3 mr-2"></i>Núcleos</a></li>
-                                <li class="list-group-item menuItem" role="button"><a href="/panel_ciclos"><i class="fas fa-school black3 mr-2"></i>Ciclos lectivos</a></li>
+                                <li class="list-group-item menuItem" role="button"><a href="/panel_estudiantes"><i class="fas fa-user-graduate mr-2"></i>Estudiantes</a></li>
+                                <li class="list-group-item menuItem" role="button"><a href="/panel_docentes"><i class="fas fa-user-friends mr-2"></i>Docentes</a></li>
+                                <li class="list-group-item menuItem" role="button"><a href="/panel_instrumentos"><i class="fas fa-guitar mr-2"></i>Instrumentos</a></li>
+                                <li class="list-group-item menuItem" role="button"><a href="/panel_usuarios"><i class="fas fa-users mr-2"></i>Usuarios</a></li>
+                                <li class="list-group-item menuItem" role="button"><a href="/panel_nucleos"><i class="fas fa-map-marked-alt mr-2"></i>Núcleos</a></li>
+                                <li class="list-group-item menuItem" role="button"><a href="/panel_ciclos"><i class="fas fa-school mr-2"></i>Ciclos lectivos</a></li>
                                 <li class="list-group-item menuItem" role="button"><a href="/panel_adminsitio"><i class="fas fa-globe-americas black3 mr-2"></i>Administración del sitio</a></li>
                             </ul>
                             <hr>
