--- a/flaskps/templates/auth/panel_components/nucleos.html
+++ b/flaskps/templates/auth/panel_components/nucleos.html
@@ -49,6 +49,33 @@
                 </div>
             </nav>
         </div>
+        <div class="col-12">
+            <div class="card">
+                <div class="card-body">
+                    <h1 class="black5 h5"><i class="fas fa-map-marker-alt mr-2"></i>Ubicación</h1>
+                    <hr>
+                    <div id="bigmapid"></div>
+                    <script>
+                        var mymap = L.map('bigmapid').setView([-34.9060, -57.89], 12.1);
+
+                        L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token={accessToken}', {
+                            attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, <a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
+                            maxZoom: 18,
+                            id: 'mapbox/streets-v11',
+                            accessToken: 'pk.eyJ1IjoibnVtZXJhIiwiYSI6ImNrNDF0bnQ2ejAxZmwzZHB0aTNta3FrZmgifQ.72Hy10HV07lVW5VjaQr9sA'
+                        }).addTo(mymap);
+
+                    </script>
+                    {% for row in nucleos %}
+                    <script>
+                        var latitude = {{row.latitude}}
+                        var longitude = {{row.longitude}}
+                        var marker = L.marker([latitude, longitude]).addTo(mymap);
+                    </script>
+                    {% endfor %}
+                </div>
+            </div>
+        </div>
         <script type="text/javascript" src="{{url_for('static', filename='js/jquery.min.js') }}"></script>
         <script type="text/javascript" src="{{url_for('static', filename = 'js/bootstrap.min.js')}}"></script>
     </div>
