--- a/flaskps/templates/auth/panel_components/ciclos_lectivos.html
+++ b/flaskps/templates/auth/panel_components/ciclos_lectivos.html
@@ -3,39 +3,87 @@
 <i class="fas fa-school black3 mr-2"></i>Ciclos lectivos
 {% endblock %}
 {% block contentitem %}
-    <div class="row row-eq-height">
-        <div class="col-md-6 mb-3">
-            <div class="card h-100">
+    <div class="row">
+        <div class="col-12 col-md-6 mb-3">
+            <div class="card">
                 <div class="card-header py-1">
                     Ciclos lectivos
                 </div>
                 <div class="card-body pb-1">
-                    <form method="POST">
-                        {% for ciclo in ciclos_lectivos %}
+                    <form method="POST" action="/insert_ciclo">
                         <div class="form-group row">
-                            <div class="col-md-4 mb-2">
-                                <h1 class="h5 mb-4">Ciclo lectivo {{ciclo.semestre}} (2019)</h1>
-                            </div>
-                            <div class="col-md-4 mb-2">
+                            <div class="col-12 col-md-6">
                                 <label class="mb-2">Fecha inicio</label>
-                                <input class="form-control" type="date" name="fecha_ini" value="{{ciclo.fecha_ini.strftime('%Y-%m-%d')}}">
+                                <input class="form-control" type="date" name="fecha_ini" required>
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-12 col-md-6">
                                 <label class="mb-2">Fecha cierre</label>
-                                <input class="form-control" type="date" name="fecha_fin" value="{{ciclo.fecha_fin.strftime('%Y-%m-%d')}}">
+                                <input class="form-control" type="date" name="fecha_fin" required>
+                            </div>
+                            <div class="col-12 col-md-6 mt-3">
+                                <label class="mb-2">Semestre</label>
+                                <select name="semestre" class="browser-default custom-select" required>
+                                    <option selected disabled>Seleccionar</option>
+                                    <option value="1">Semestre I</option>
+                                    <option value="2">Semestre II</option>
+                                </select>
                             </div>
                         </div> 
                         <hr>
-                        {% endfor %}
                         <div class="form-group row">
                             <div class="col-md-12 text-right">
-                                <button class="btn btn-secondary disabled" disabled>Guardar</button>
+                                <button type="submit" class="btn btn-secondary">Guardar</button>
                             </div>
                         </div> 
                     </form>
                 </div>
             </div>
         </div>
+        <div class="col-12 col-md-6 mb-3">
+            <div class="card h-100">
+                <div class="card-header py-1">
+                    Ciclos lectivos vigentes
+                </div>
+                <div class="card-body pb-1">
+                    {% for ciclo in ciclos %}
+                    <form method="POST" action="/update_ciclo">
+                        <div class="form-group row">
+                            <div class="col-12 mb-4">
+                                <label class="p2">(*) Las fechas de los ciclos lectivos se pueden modificar haciendo click sobre el picker date y guardando la nueva fecha seleccionada</label>
+                            </div>
+                            <div class="col-12 mb-2">
+                                <h1 class="h5 mb-4">Ciclo lectivo {{ciclo.semestre}} (2019)</h1>
+                            </div>
+                            <div class="col-12 col-md-6 mb-2">
+                                <label class="mb-2">Fecha inicio</label>
+                                <input class="form-control" type="date" name="fecha_ini" value="{{ciclo.fecha_ini.strftime('%Y-%m-%d')}}">
+                            </div>
+                            <div class="col-12 col-md-6">
+                                <label class="mb-2">Fecha cierre</label>
+                                <input class="form-control" type="date" name="fecha_fin" value="{{ciclo.fecha_fin.strftime('%Y-%m-%d')}}">
+                            </div>
+                            <div class="col-12 col-md-6">
+                                <label class="mb-2">Semestre</label>
+                                <select name="semestre" class="browser-default custom-select" required>
+                                    <option selected disabled>Seleccionar</option>
+                                    <option value="1">Semestre I</option>
+                                    <option value="2">Semestre II</option>
+                                </select>
+                            </div>
+                        </div> 
+                        <hr>
+                        <div class="form-group row">
+                            <div class="col-md-12 text-right">
+                                <button type="submit" class="btn btn-secondary">Guardar</button>
+                            </div>
+                        </div> 
+                    </form>
+                    {% endfor %}
+                </div>
+            </div>
+        </div>
+
+        
         <div class="col-md-6 mb-3">
             <div class="card h-100">
                 <div class="card-header py-1">
