--- a/flaskps/templates/auth/panel_components/instrumento_new.html
+++ b/flaskps/templates/auth/panel_components/instrumento_new.html
@@ -26,7 +26,7 @@
                                         </select>
                                         <label class="h6 w400 black4">Codigo</label>
                                         <input type="text" class="form-control mb-3" placeholder="Codigo" name="codigo" required>
-                                        <label class="h6 w400 black4">Imagen</label>
+                                        <!--label class="h6 w400 black4">Imagen</label>
                                         <div class="input-group">
                                             <div class="input-group-prepend">
                                               <span class="input-group-text" id="inputGroupFileAddon01">Subir</span>
@@ -37,7 +37,7 @@
                                                     
                                                 <label class="custom-file-label" for="inputGroupFile01">Elegir archivo</label>
                                             </div>
-                                        </div>
+                                        </div-->
                                     </div>
                                     <div class="col-12 text-right">
                                         <hr>
