--- a/flaskps/templates/auth/panel_components/instrumento_update.html
+++ b/flaskps/templates/auth/panel_components/instrumento_update.html
@@ -31,7 +31,7 @@
                                         </select>
                                         <label class="h6 w400 black4">Codigo</label>
                                         <input type="text" class="form-control mb-3" value="{{ instrumento.codigo }}" name="codigo" required>
-                                        <img class="instrumento" src="/static/img/instrumentos/{{instrumento.img}}" alt="Imagen de instrumento">
+                                        <!--img class="instrumento" src="/static/img/instrumentos/{{instrumento.img}}" alt="Imagen de instrumento"-->
                                     </div>
                                     <div class="col-12 text-right">
                                         <hr>
